--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,121 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    
-    <meta charset="utf-8">
-    <title>My Portfolio Site</title>
-  </head>
-  <body>
-    Hello, World.
-  </body>
+<head>
+  <meta charset="utf-8">
+  <script src="https://use.fontawesome.com/18d7b7a6f1.js"></script>
+  <link rel="stylesheet" type="text/css" href="hello.css">
+  <title>My Portfolio</title>
+</head>
+<body>
+  <a name="home"></a>
+  <div class="jesspic">
+    <img src="jess_main_pic.jpg" height= "50%" width="100%">
+  </div>
+  <div class="jumbotext">
+    <h1>JESSICA COTZIN</h1>
+    <p>
+      WEB DEVELOPER <span style="color:#F9CDAD">+</span> WRITER <span style="color:#F9CDAD">+</span> TRAVELER
+    </p>
+    <span><p>
+      Hi, I'm Jessica! I am a Junior Developer and am<br> always hungry to learn more every day!
+    </p></span>
+  </div>
+  <div class="contact-icons">
+    <a href="https://www.facebook.com/4ssej" target="_blank" title="Facebook"><i class="fa fa-facebook-square" aria-hidden="true">&emsp;</i></a>
+    <a href="https://www.instagram.com/dawarriorsince1987/" target="_blank" title="Instagram"><i class="fa fa-instagram" aria-hidden="true">&emsp;</i></a>
+    <a href="https://www.linkedin.com/in/jessica-cotzin-6b614a8a
+" target="_blank" title="Linkedin"><i class="fa fa-linkedin-square" aria-hidden="true">&emsp;</i></a>
+    <a href="https://github.com/jcotzin" target="_blank" title="Github"><i class="fa fa-github" aria-hidden="true">&emsp;</i></a>
+  </div>
+  <div class="wrap">
+    <ul class="nav">
+      <li><a href="#home">HOME</a><i class="circle"></i></li>
+      <li><a href="#about">ABOUT</a></li>
+      <li><a href="#skillz">SKILLS/EXPERIENCE</a></li>
+      <li><a href="#contact">CONTACT</a></li>
+    </ul>
+  </div>
+  <a name="about"></a>
+  <div class="about-page">
+    <div class="info">
+      <h4>NAME</h4>
+      <p>Jessica Cotzin</p>
+      <h4>HOMETOWN</h4>
+      <p>Parkland, Florida</p>
+      <h4>PASSIONS</h4>
+      <p>Traveling, Art, Creativity, Reading</p>
+    </div>
+    <div class="info2">
+      <h4>LOCATION</h4>
+      <p>Miami Beach, Florida</p>
+      <h4>CONTACT</h4>
+      <p>jcotzin@gmail.com<br>954.425.2325</p>
+      <h4>WEB</h4>
+      <p><a href="https://github.com/jcotzin">My Github</a></p>
+    </div>
+    <div class="aboutme-container">
+      <div class="title/pic">
+        <h3>< About Me ></h3>
+        <div class="jess-circle">
+          <img src="https://dl.dropboxusercontent.com/s/xkl7oh9nri6kiu2/jess_aboutme01.jpg?dl=0" height=20% width=20%>
+        </div>
+      </div>
+      <div class="about">
+        <p>Hi, my name is Jessica! I'm a freelance writer, web developer and avid traveler. Born and raised in South Florida, I graduated with a Bachelor’s Degree in Multi-Media Journalism from Florida Atlantic University, and currently reside in Miami Beach. My passions lie in reading great literature and traveling the world, bumping blindly into new and fantastic people and events.
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="madskillz">
+    <a name="skillz"></a>
+    <h3>SKILLS & EXPERIENCE</h3>
+    <div class="flex-container">
+      <div class="flex-item">
+        <img src="https://dl.dropboxusercontent.com/s/lijd36e2dvmvc4h/css3_icon.png?dl=0" alt="CSS3 Icon">
+      </div>
+      <div class="html-item">
+        <img src="html5_icon.png" alt="HTML5 Icon" width="115px" height="115px">
+      </div>
+      <div class="flex-item">
+        <img src="javascript_logo.jpg" alt="JS Icon">
+      </div>
+      <div class="ruby-item">
+        <img src="ruby_icon.png" alt="Ruby Icon" width="105px" height="105px">
+      </div>
+    </div>
+  </div>
+  <div class="experience">
+    <div class="wyn">
+      <img src="wyncode_icon.jpg" alt="Wyncode Icon" width="144px" height="103px" style="margin-top:-22px;">
+      <p>
+        A 9 week immersive boot camp for web development & software engineering that teaches object oriented web development using Ruby and the Ruby on Rails framework, alongside JavaScript, HTML and CSS
+      </p>
+    </div>
+    <div class="gogo">
+      <img src="gogobot_logo.png" alt="Gogobot Icon" width="275px" height="77px"  style="margin-top:-33px; padding-bottom:14px;">
+      <p>
+        City Coorespondent/Miami Gogo This Week Writer. Create and edit city guides for Miami Dade and hotel reviews. Weekly event roudup with "Gogo This Week".
+      </p>
+    </div>
+    <div class="sss">
+      <img src="SSS_logo.jpg" alt="SSS Icon" width="295px" height="87px" style="margin-top:-55px; padding-bottom:6px;">
+      <p>
+        Community Development Coordinator. Currate new partnerships with clients and oversee the customer service department.
+      </p>
+    </div>
+    <a name="contact"></a>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+</body>
 </html>
