--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
   <title>My Portfolio</title>
 </head>
 <body>
+  <header class="image-bg-fluid-height-width">
+       <img class="img-responsive img-center" src="images/prof_pic.jpg" alt="">
+   </header>
   <a name="home"></a>
   <div class="jesspic">
     <img src="jess_main_pic.jpg" height= "50%" width="100%">
