--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8">
   <script src="https://use.fontawesome.com/18d7b7a6f1.js"></script>
-  <link rel="stylesheet" type="text/css" href="hello.css">
+  <link rel="stylesheet" type="text/css" href="/hello.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>My Portfolio</title>
 </head>
 <body>
-  <header class="image-bg-fluid-height-width">
-       <img class="img-responsive img-center" src="images/prof_pic.jpg" alt="">
-   </header>
   <a name="home"></a>
   <div class="jesspic">
     <img src="jess_main_pic.jpg" height= "50%" width="100%">
@@ -20,7 +19,7 @@
       WEB DEVELOPER <span style="color:#F9CDAD">+</span> WRITER <span style="color:#F9CDAD">+</span> TRAVELER
     </p>
     <span><p>
-      Hi, I'm Jessica! I am a Junior Developer and am<br> always hungry to learn more every day!
+      Hi, I'm Jessica! I am a Developer and am<br> always hungry to learn more every day!
     </p></span>
   </div>
   <div class="contact-icons">
@@ -95,7 +94,7 @@
       </p>
     </div>
     <div class="gogo">
-      <img src="gogobot_logo.png" alt="Gogobot Icon" width="275px" height="77px"  style="margin-top:-33px; padding-bottom:14px;">
+      <img src="./gogobot_logo.png" alt="Gogobot Icon" width="275px" height="77px"  style="margin-top:-33px; padding-bottom:14px;">
       <p>
         City Coorespondent/Miami Gogo This Week Writer. Create and edit city guides for Miami Dade and hotel reviews. Weekly event roudup with "Gogo This Week".
       </p>
@@ -109,16 +108,5 @@
     <a name="contact"></a>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
