added media queries

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       <li><a href="#home">HOME</a><i class="circle"></i></li>
       <li><a href="#about">ABOUT</a></li>
       <li><a href="#skillz">SKILLS/EXPERIENCE</a></li>
-      <li><a href="#contact">CONTACT</a></li>
+      <li><a href="#blog">BLOG</a></li>
     </ul>
   </div>
   <a name="about"></a>
@@ -54,7 +54,7 @@
       <p><a href="https://github.com/jcotzin">My Github</a></p>
     </div>
     <div class="aboutme-container">
-      <div class="title/pic">
+      <div class="title-pic">
         <h3>< About Me ></h3>
         <div class="jess-circle">
           <img src="https://dl.dropboxusercontent.com/s/xkl7oh9nri6kiu2/jess_aboutme01.jpg?dl=0" height=20% width=20%>
@@ -103,7 +103,7 @@
         Community Development Coordinator. Currate new partnerships with clients and oversee the customer service department.
       </p>
     </div>
-    <a name="contact"></a>
+    <a name="blog"></a>
   </div>
 </div>
 
