--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       WEB DEVELOPER <span style="color:#F9CDAD">+</span> WRITER <span style="color:#F9CDAD">+</span> TRAVELER
     </p>
     <span><p>
-      Hi, I'm Jessica! I am a Junior Developer and am<br> always hungry to learn more every day!
+      Hi, I'm Jessica! I am a Web Developer and Freelancer in Miami Beach.
     </p></span>
   </div>
   <div class="contact-icons">
