added more content

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <script src="https://use.fontawesome.com/18d7b7a6f1.js"></script>
   <link rel="stylesheet" type="text/css" href="hello.css">
