added images with text overlay to portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
   <script src="https://use.fontawesome.com/18d7b7a6f1.js"></script>
   <link rel="stylesheet" type="text/css" href="hello.css">
   <title>My Portfolio</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script type="text/javascript" src="hello.js"></script>
 </head>
 <body>
   <a name="home"></a>
@@ -33,7 +35,7 @@
       <li><a href="#home">HOME</a><i class="circle"></i></li>
       <li><a href="#about">ABOUT</a></li>
       <li><a href="#skillz">SKILLS/EXPERIENCE</a></li>
-      <li><a href="#blog">BLOG</a></li>
+      <li><a href="#portfolio">PORTFOLIO</a></li>
     </ul>
   </div>
   <a name="about"></a>
@@ -104,9 +106,18 @@
         Community Development Coordinator. Currate new partnerships with clients and oversee the customer service department.
       </p>
     </div>
-    <a name="blog"></a>
   </div>
-</div>
+
+  <div class="portfolio">
+      <div class="hold-it">
+        <img src="Stranger_places.jpg" alt="Stranger Places" />
+        <span class="overlay"><h4>Stranger Places</h4><p>Endless persistently dove black where hey and spoke a much that excepting goodness poutingly then stylistic</p></span>
+  </div>
+  <div class="hold-it">
+    <img src="http://i.huffpost.com/gen/2313280/images/o-MEXICO-facebook.jpg" />
+    <span class="overlay"><h4>Shouni</h4><p>Darn vivid derisive crud quietly walked but newt gorilla until tacitly about far</p></span>
+  </div>
+  </div>
 
 
 </body>
