finished mobile layout

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,17 @@
   <title>My Portfolio</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script type="text/javascript" src="hello.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 </head>
 <body>
   <a name="home"></a>
   <div class="jesspic">
-    <img src="jess_main_pic.jpg" height= "50%" width="100%">
+    <img src="jesstrain1.jpg" height= "50%" width="100%">
   </div>
+  <div class="color"><h1>JESSICA COTZIN</h1>
+  <p>
+    WEB DEVELOPER <span style="color:#F9CDAD">+</span> WRITER <span style="color:#F9CDAD">+</span> TRAVELER
+  </p></div>
   <div class="jumbotext">
     <h1>JESSICA COTZIN</h1>
     <p>
@@ -34,7 +39,7 @@
     <ul class="nav">
       <li><a href="#home">HOME</a><i class="circle"></i></li>
       <li><a href="#about">ABOUT</a></li>
-      <li><a href="#skillz">SKILLS/EXPERIENCE</a></li>
+      <li><a href="#skillz">SKILLS/XP</a></li>
       <li><a href="#portfolio">PORTFOLIO</a></li>
     </ul>
   </div>
@@ -46,7 +51,7 @@
       <h4>HOMETOWN</h4>
       <p>Parkland, Florida</p>
       <h4>PASSIONS</h4>
-      <p>Traveling, Art, Creativity, Reading</p>
+      <p>Travel, Art, Creativity, Reading</p>
     </div>
     <div class="info2">
       <h4>LOCATION</h4>
@@ -60,7 +65,7 @@
       <div class="title-pic">
         <h3>< About Me ></h3>
         <div class="jess-circle">
-          <img src="https://dl.dropboxusercontent.com/s/xkl7oh9nri6kiu2/jess_aboutme01.jpg?dl=0" height=20% width=20%>
+          <img src="https://dl.dropboxusercontent.com/s/xkl7oh9nri6kiu2/jess_aboutme01.jpg?dl=0" height=20% width=32%>
         </div>
       </div>
       <div class="about">
@@ -95,7 +100,7 @@
       </p>
     </div>
     <div class="gogo">
-      <img src="gogobot_logo.png" alt="Gogobot Icon" width="271px" height="73px"  style="margin-top:-33px; padding-bottom:14px;">
+      <img src="gogobot_logo.png" alt="Gogobot Icon" width="250px" height="80px"  style="margin-top:-33px; padding-bottom:14px;">
       <p>
         City Coorespondent/Miami Gogo This Week Writer. Create and edit city guides for Miami Dade and hotel reviews. Weekly event roudup with "Gogo This Week".
       </p>
@@ -109,13 +114,14 @@
   </div>
 
   <div class="portfolio">
+      <a name="portfolio"></a>
       <div class="hold-it">
         <img src="Stranger_places.jpg" alt="Stranger Places" />
-        <span class="overlay"><h4>Stranger Places</h4><p>Endless persistently dove black where hey and spoke a much that excepting goodness poutingly then stylistic</p></span>
+        <span class="overlay"><h4>Stranger Places</h4><p>Conceived due to my love for traversing wild and exotic landscapes. It is a Web App for travelers looking to get off the beaten path. Made with HTML5, Ruby, and JS on a Rails framework.</p></span>
   </div>
   <div class="hold-it">
     <img src="http://i.huffpost.com/gen/2313280/images/o-MEXICO-facebook.jpg" />
-    <span class="overlay"><h4>Shouni</h4><p>Darn vivid derisive crud quietly walked but newt gorilla until tacitly about far</p></span>
+    <span class="overlay"><h4>codeXhunter</h4><p>A Web App for discovering and sharing Web Developers' favorite coding resources. Made with HTML5, Ruby, and JS on a Rails framework.</p></span>
   </div>
   </div>
 
