added more projects

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,6 @@
   <script src="https://use.fontawesome.com/18d7b7a6f1.js"></script>
   <link rel="stylesheet" type="text/css" href="hello.css">
   <title>My projects</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script type="text/javascript" src="hello.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 </head>
 <body>
@@ -118,18 +116,22 @@
       <a name="projects"></a>
       <div class="hold-it">
         <img src="Stranger_places.jpg" alt="Stranger Places" />
-        <span class="overlay"><h4>Stranger Places</h4><p>Conceived due to my love for traversing wild and exotic landscapes. It is a Web App for travelers looking to get off the beaten path. Made with HTML5, Ruby, and JS on a Rails framework.</p><a href="https://github.com/jcotzin/Stranger_Places" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
+        <span class="overlay"><h4>Stranger Places&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i>
+</h4><p>Conceived due to my love for traversing wild and exotic landscapes. It is a Web App for travelers looking to get off the beaten path. Made with HTML5, Ruby, JS, and Bootstrap on a Rails framework.</p><a href="https://github.com/jcotzin/Stranger_Places" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
       </div>
       <div class="hold-it">
         <img src="coding_resources.png" />
-        <span class="overlay"><h4>codeXhunter</h4><p>A Web App for discovering and sharing Web Developers' favorite coding resources. Made with HTML5, Ruby, and JS on a Rails framework.</p><a href="https://github.com/jcotzin/Coding_Resources" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
+        <span class="overlay"><h4>codeXhunter&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i></h4><p>A Web App for discovering and sharing Web Developers' favorite coding resources. Made with HTML5, Ruby, JS and Materialize on a Rails framework.</p><a href="https://github.com/jcotzin/Coding_Resources" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
       </div>
       <div class="hold-it">
-        <img src="coding_resources.png" />
-        <span class="overlay"><h4>codeXhunter</h4><p>A Web App for discovering and sharing Web Developers' favorite coding resources. Made with HTML5, Ruby, and JS on a Rails framework.</p><a href="https://github.com/jcotzin/Coding_Resources" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
+        <img src="shouni.png" />
+        <span class="overlay"><h4>Shouni</h4><p>Shouni is an anime generator app for fellow anime-lovers. Never get bored on those lonely nights! Shouni was made with HTML5, jQuery and Ruby on a Rails framework. </p>
+<a href="https://github.com/JAnderson88/shouni" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i></a><a href="https://stormy-badlands-22918.herokuapp.com/" ><i class="fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></i>
+</a></span>
       </div>
     </div>
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script type="text/javascript" src="hello.js"></script>
   </body>
   </html>
