--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <script src="https://use.fontawesome.com/18d7b7a6f1.js"></script>
   <link rel="stylesheet" type="text/css" href="hello.css">
   <title>My projects</title>
+
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 </head>
 <body>
@@ -29,107 +30,132 @@
         <a href="https://www.facebook.com/4ssej" target="_blank" title="Facebook"><i class="fa fa-facebook-square" aria-hidden="true">&emsp;</i></a>
         <a href="https://www.instagram.com/dawarriorsince1987/" target="_blank" title="Instagram"><i class="fa fa-instagram" aria-hidden="true">&emsp;</i></a>
         <a href="https://www.linkedin.com/in/jessica-cotzin-6b614a8a
-    " target="_blank" title="Linkedin"><i class="fa fa-linkedin-square" aria-hidden="true">&emsp;</i></a>
+        " target="_blank" title="Linkedin"><i class="fa fa-linkedin-square" aria-hidden="true">&emsp;</i></a>
         <a href="https://github.com/jcotzin" target="_blank" title="Github"><i class="fa fa-github" aria-hidden="true">&emsp;</i></a>
       </div>
     </div>
+  </div>
+  <div class="wrap">
+    <ul class="nav">
+      <li><a href="#home">HOME</a><i class="circle"></i></li>
+      <li><a href="#about">ABOUT</a></li>
+      <li><a href="#skillz">SKILLS/XP</a></li>
+      <li><a href="#projects">PROJECTS</a></li>
+    </ul>
+  </div>
+  <a name="about"></a>
+  <div class="about-page">
+    <div class="info">
+      <h4>NAME</h4>
+      <p>Jessica Cotzin</p>
+      <h4>HOMETOWN</h4>
+      <p>Parkland, Florida</p>
+      <h4>PASSIONS</h4>
+      <p>Travel, Art, Creativity, Reading</p>
     </div>
-    <div class="wrap">
-      <ul class="nav">
-        <li><a href="#home">HOME</a><i class="circle"></i></li>
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#skillz">SKILLS/XP</a></li>
-        <li><a href="#projects">PROJECTS</a></li>
-      </ul>
+    <div class="info2">
+      <h4>LOCATION</h4>
+      <p>Miami Beach, Florida</p>
+      <h4>CONTACT</h4>
+      <p>jcotzin@gmail.com<br>954.425.2325</p>
+      <h4>WEB</h4>
+      <p><a href="https://github.com/jcotzin">My Github</a></p>
     </div>
-    <a name="about"></a>
-    <div class="about-page">
-      <div class="info">
-        <h4>NAME</h4>
-        <p>Jessica Cotzin</p>
-        <h4>HOMETOWN</h4>
-        <p>Parkland, Florida</p>
-        <h4>PASSIONS</h4>
-        <p>Travel, Art, Creativity, Reading</p>
-      </div>
-      <div class="info2">
-        <h4>LOCATION</h4>
-        <p>Miami Beach, Florida</p>
-        <h4>CONTACT</h4>
-        <p>jcotzin@gmail.com<br>954.425.2325</p>
-        <h4>WEB</h4>
-        <p><a href="https://github.com/jcotzin">My Github</a></p>
-      </div>
-      <div class="aboutme-container">
-        <div class="title-pic">
-          <h3>< About Me ></h3>
-          <div class="jess-circle">
-            <img src="jess_aboutme.png" height=20% width=32%>
-          </div>
-        </div>
-        <div class="about">
-          <p>Hi, my name is Jessica! I'm a freelance writer, web developer and avid traveler. Born and raised in South Florida, I graduated with a Bachelor’s Degree in Multi-Media Journalism from Florida Atlantic University, and currently reside in Miami Beach. My passions lie in reading great literature and traveling the world, bumping blindly into new and fantastic people and events.
-          </div>
+    <div class="aboutme-container">
+      <div class="title-pic">
+        <h3>< About Me ></h3>
+        <div class="jess-circle">
+          <img src="jess_aboutme.png" height=20% width=32%>
         </div>
       </div>
-    </div>
-    <div class="madskillz">
-      <a name="skillz"></a>
-      <h3>< SKILLS & EXPERIENCE ></h3>
-      <div class="flex-container">
-        <div class="flex-item">
-          <img src="https://dl.dropboxusercontent.com/s/lijd36e2dvmvc4h/css3_icon.png?dl=0" alt="CSS3 Icon">
-        </div>
-        <div class="html-item">
-          <img src="html5_icon.png" alt="HTML5 Icon" width="115px" height="115px">
-        </div>
-        <div class="flex-item">
-          <img src="javascript_logo.jpg" alt="JS Icon">
-        </div>
-        <div class="ruby-item">
-          <img src="ruby_icon.png" alt="Ruby Icon" width="105px" height="105px">
+      <div class="about">
+        <p>Hi, my name is Jessica! I'm a freelance writer, web developer and avid traveler. Born and raised in South Florida, I graduated with a Bachelor’s Degree in Multi-Media Journalism from Florida Atlantic University, and currently reside in Miami Beach. My passions lie in reading great literature and traveling the world, bumping blindly into new and fantastic people and events.
         </div>
       </div>
     </div>
-    <div class="experience">
-      <div class="wyn">
-        <img src="wyncode_icon.jpg" alt="Wyncode Icon" width="140px" height="109px" style="margin-top:-22px;">
-        <p>
-          A 9 week immersive boot camp for web development & software engineering that teaches object oriented web development using Ruby and the Ruby on Rails framework, alongside JavaScript, HTML and CSS
-        </p>
+  </div>
+  <div class="madskillz">
+    <a name="skillz"></a>
+    <h3>< SKILLS & EXPERIENCE ></h3>
+    <div class="flex-container">
+      <div class="flex-item">
+        <img src="https://dl.dropboxusercontent.com/s/lijd36e2dvmvc4h/css3_icon.png?dl=0" alt="CSS3 Icon">
       </div>
-      <div class="gogo">
-        <img src="gogobot_logo.png" alt="Gogobot Icon" width="250px" height="80px"  style="margin-top:-33px; padding-bottom:14px;">
-        <p>
-          City Coorespondent/Miami Gogo This Week Writer. Create and edit city guides for Miami Dade and hotel reviews. Weekly event roudup with "Gogo This Week".
-        </p>
+      <div class="html-item">
+        <img src="html5_icon.png" alt="HTML5 Icon" width="115px" height="115px">
       </div>
-      <div class="sss">
-        <img src="SSS_logo.jpg" alt="SSS Icon" width="291px" height="83px" style="margin-top:-55px; padding-bottom:6px;">
-        <p>
-          Community Development Coordinator. Currate new partnerships with clients and oversee the customer service department.
-        </p>
+      <div class="flex-item">
+        <img src="javascript_logo.jpg" alt="JS Icon">
+      </div>
+      <div class="ruby-item">
+        <img src="ruby_icon.png" alt="Ruby Icon" width="105px" height="105px">
       </div>
     </div>
-    <h3>< PROJECTS ></h3>
-    <div class="projects">
-      <a name="projects"></a>
-      <div class="hold-it">
-        <img src="Stranger_places.jpg" alt="Stranger Places" />
-        <span class="overlay"><h4>Stranger Places&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i>
-</h4><p>Conceived due to my love for traversing wild and exotic landscapes. It is a Web App for travelers looking to get off the beaten path. Made with HTML5, Ruby, JS, and Bootstrap on a Rails framework.</p><a href="https://github.com/jcotzin/Stranger_Places" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
-      </div>
-      <div class="hold-it">
-        <img src="coding_resources.png" />
-        <span class="overlay"><h4>codeXhunter&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i></h4><p>A Web App for discovering and sharing Web Developers' favorite coding resources. Made with HTML5, Ruby, JS and Materialize on a Rails framework.</p><a href="https://github.com/jcotzin/Coding_Resources" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
-      </div>
-      <div class="hold-it">
-        <img src="shouni.png" />
-        <span class="overlay"><h4>Shouni</h4><p>Shouni is an anime generator app for fellow anime-lovers. Never get bored on those lonely nights! Shouni was made with HTML5, jQuery and Ruby on a Rails framework. </p>
-<a href="https://github.com/JAnderson88/shouni" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i></a><a href="https://stormy-badlands-22918.herokuapp.com/" ><i class="fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></i>
-</a></span>
-      </div>
+  </div>
+  <div class="experience">
+    <div class="wyn">
+      <img src="wyncode_icon.jpg" alt="Wyncode Icon" width="140px" height="109px" style="margin-top:-22px;">
+      <p>
+        A 9 week immersive boot camp for web development & software engineering that teaches object oriented web development using Ruby and the Ruby on Rails framework, alongside JavaScript, HTML and CSS
+      </p>
     </div>
+    <div class="gogo">
+      <img src="gogobot_logo.png" alt="Gogobot Icon" width="250px" height="80px"  style="margin-top:-33px; padding-bottom:14px;">
+      <p>
+        City Coorespondent/Miami Gogo This Week Writer. Create and edit city guides for Miami Dade and hotel reviews. Weekly event roudup with "Gogo This Week".
+      </p>
+    </div>
+    <div class="sss">
+      <img src="SSS_logo.jpg" alt="SSS Icon" width="291px" height="83px" style="margin-top:-55px; padding-bottom:6px;">
+      <p>
+        Community Development Coordinator. Currate new partnerships with clients and oversee the customer service department.
+      </p>
+    </div>
+  </div>
+  <h3>< PROJECTS ></h3>
+  <div class="projects">
+    <a name="projects"></a>
+    <div class="hold-it">
+      <img src="Stranger_places.jpg" alt="Stranger Places" />
+      <span class="overlay"><h4>Stranger Places&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i>
+      </h4><p>Conceived due to my love for traversing wild and exotic landscapes. It is a Web App for travelers looking to get off the beaten path. Made with HTML5, Ruby, JS, and Bootstrap on a Rails framework.</p><a href="https://github.com/jcotzin/Stranger_Places" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
+    </div>
+    <div class="hold-it">
+      <img src="coding_resources.png" />
+      <span class="overlay"><h4>codeXhunter&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i></h4><p>A Web App for discovering and sharing Web Developers' favorite coding resources. Made with HTML5, Ruby, JS and Materialize on a Rails framework.</p><a href="https://github.com/jcotzin/Coding_Resources" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
+    </div>
+    <div class="hold-it">
+      <img src="shouni.png" />
+      <span class="overlay"><h4>Shouni</h4><p>Shouni is an anime generator app for fellow anime-lovers. Never get bored on those lonely nights! Shouni was made with HTML5, jQuery and Ruby on a Rails framework. </p>
+        <a href="https://github.com/JAnderson88/shouni" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i></a><a href="https://stormy-badlands-22918.herokuapp.com/" ><i class="fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></i>
+        </a></span>
+      </div>
+  </div>
+
+  <div class="projects">
+    <a name="projects"></a>
+    <div class="hold-it">
+      <img src="cloudapp.png" />
+      <span class="overlay"><h4>cloudapp</h4><p>A virtual appointment and
+online scheduling application
+connecting patients with doctors. </p>
+        <a href="https://github.com/jcotzin/Cloud_Appointment" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i></a><a href="https://cloud-appointments.herokuapp.com/" ><i class="fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></i>
+        </a></span>
+      </div>
+    <div class="hold-it">
+      <img src="school1.png" />
+      <span class="overlay"><h4>Little Montessori</h4><p>A website I made with HTML5, CSS, JS, jQuery, and Bootstrap in Sinatra web framwork. </p>
+        <a href="https://github.com/jcotzin/little_mont" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i></a><a href="https://little-montessori.herokuapp.com/index.html" ><i class="fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></i>
+        </a></span>
+      </div>
+    <div class="hold-it">
+      <img src="shouni.png" />
+      <span class="overlay"><h4>Shouni</h4><p>Shouni is an anime generator app for fellow anime-lovers. Never get bored on those lonely nights! Shouni was made with HTML5, jQuery and Ruby on a Rails framework. </p>
+        <a href="https://github.com/JAnderson88/shouni" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i></a><a href="https://stormy-badlands-22918.herokuapp.com/" ><i class="fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></i>
+        </a></span>
+      </div>
+</div>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="hello.js"></script>
