added mobile hover effect and added more to portfolio work

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 </head>
 <body>
-
   <a name="home"></a>
   <div class="jesspic-color">
     <div class="map-marker">
@@ -117,26 +116,26 @@
     <a name="projects"></a>
     <div class="hold-it">
       <img src="Stranger_places.jpg" alt="Stranger Places" />
-      <span class="overlay"><h4>Stranger Places&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i>
+      <span class="overlay hover"><h4>Stranger Places&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i>
       </h4><p>Conceived due to my love for traversing wild and exotic landscapes. It is a Web App for travelers looking to get off the beaten path. Made with HTML5, Ruby, JS, and Bootstrap on a Rails framework.</p><a href="https://github.com/jcotzin/Stranger_Places" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
     </div>
     <div class="hold-it">
       <img src="coding_resources.png" />
-      <span class="overlay"><h4>codeXhunter&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i></h4><p>A Web App for discovering and sharing Web Developers' favorite coding resources. Made with HTML5, Ruby, JS and Materialize on a Rails framework.</p><a href="https://github.com/jcotzin/Coding_Resources" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
+      <span class="overlay hover"><h4>codeXhunter&nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i></h4><p>A Web App for discovering and sharing Web Developers' favorite coding resources. Made with HTML5, Ruby, JS and Materialize on a Rails framework.</p><a href="https://github.com/jcotzin/Coding_Resources" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&emsp;</i></a></span>
     </div>
     <div class="hold-it">
       <img src="shouni.png" />
-      <span class="overlay"><h4>Shouni</h4><p>Shouni is an anime generator app for fellow anime-lovers. Never get bored on those lonely nights! Shouni was made with HTML5, jQuery and Ruby on a Rails framework. </p>
+      <span class="overlay hover"><h4>Shouni</h4><p>Shouni is an anime generator app for fellow anime-lovers. Never get bored on those lonely nights! Shouni was made with HTML5, jQuery and Ruby on a Rails framework. </p>
         <a href="https://github.com/JAnderson88/shouni" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i></a><a href="https://stormy-badlands-22918.herokuapp.com/" ><i class="fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></i>
         </a></span>
       </div>
   </div>
 
-  <div class="projects">
+  <div class="projects2">
     <a name="projects"></a>
     <div class="hold-it">
       <img src="cloudapp.png" />
-      <span class="overlay"><h4>cloudapp</h4><p>A virtual appointment and
+      <span class="overlay hover"><h4>cloudapp</h4><p>A virtual appointment and
 online scheduling application
 connecting patients with doctors. </p>
         <a href="https://github.com/jcotzin/Cloud_Appointment" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i></a><a href="https://cloud-appointments.herokuapp.com/" ><i class="fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></i>
@@ -144,18 +143,17 @@ connecting patients with doctors. </p>
       </div>
     <div class="hold-it">
       <img src="school1.png" />
-      <span class="overlay"><h4>Little Montessori</h4><p>A website I made with HTML5, CSS, JS, jQuery, and Bootstrap in Sinatra web framwork. </p>
+      <span class="overlay hover"><h4>Little Montessori</h4><p>A website I made with HTML5, CSS, JS, jQuery, and Bootstrap in Sinatra web framwork. </p>
         <a href="https://github.com/jcotzin/little_mont" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i></a><a href="https://little-montessori.herokuapp.com/index.html" ><i class="fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></i>
         </a></span>
       </div>
     <div class="hold-it">
-      <img src="shouni.png" />
-      <span class="overlay"><h4>Shouni</h4><p>Shouni is an anime generator app for fellow anime-lovers. Never get bored on those lonely nights! Shouni was made with HTML5, jQuery and Ruby on a Rails framework. </p>
-        <a href="https://github.com/JAnderson88/shouni" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i></a><a href="https://stormy-badlands-22918.herokuapp.com/" ><i class="fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></i>
+      <img src="gif.gif" />
+      <span class="overlay hover"><h4>Next Project Coming!</h4><p></p>
+        <!-- <a href="" target="_blank" title="Github"><i class="fa fa-github fa-3x" aria-hidden="true">&nbsp;</i></a><a href="" ><i class="fa fa-arrow-circle-o-right fa-3x" aria-hidden="true"></i> -->
         </a></span>
       </div>
 </div>
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="hello.js"></script>
